package tese.interfaces;

public interface AlgoritmoHeuristico<T> {
    public T executar();
}
