package tese.interfaces;

public interface GestorInterfaceGrafica {
}
