@startuml
skinparam classAttributeIconSize 0

interface LeitorFicheiros
interface AlgoritmoHeuristico
interface GestorInterfaceGrafica
interface GestorBaseDados {
    void conectar(String ip, String port, String user, String password);
    void desconectar();
    void criar(String nomeTabela, Map<String, Object> dados) throws SQLException;
    Map<String, ArrayList<Object>> lerTabela(String nomeTabela, String condicao);
    void atualizar(String nomeTabela, Map<String, Object> dados, String condicao);
    void remover(String nomeTabela, String condicao) throws SQLException;
}

class GestorBDPostgreSQL {
    -String ip;
    -String port;
    -String user;
    -String password;
    -String nome_bd;
    -String jdbcPostgres;
    -Connection conexao;

    void conectar(String ip, String port, String user, String password);
    void desconectar();
    void criar(String nomeTabela, Map<String, Object> dados) throws SQLException;
    Map<String, ArrayList<Object>> lerTabela(String nomeTabela, String condicao);
    void atualizar(String nomeTabela, Map<String, Object> dados, String condicao);
    void remover(String nomeTabela, String condicao) throws SQLException;
}

class InterfaceGraficaSwing
class InterpretadorITC
class SimulatedAnnealing

LeitorFicheiros <|.. InterpretadorITC
AlgoritmoHeuristico <|.. SimulatedAnnealing
GestorInterfaceGrafica <|.. InterfaceGraficaSwing
GestorBaseDados <|.. GestorBDPostgreSQL
@enduml